# resource-schema-guard-rail

./: .coveragerc  .pre-commit-config.yaml  .pylintrc  MANIFEST.in  README.md  pytest.ini  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  test-cov.sh
.github/workflows/: build-extensions.yml  codeql.yml  pr-ci.yml  pypi-release.yml
docs/: BASIC_LINTING.md  BREAKING_CHANGE.md  RULE_DEVELOPMENT.md
intellij-extension/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
src/: cli.py  sample-schema.json
tests/integ/: integ_statefull.py  integ_stateless.py  test_integ_cli.py  test_integ_statefull.py  test_integ_stateless.py  test_statefull.py  test_stateless.py
tests/integ/data/: aws-verifiedpermissions-policy.json  sample-schema-create-only-pid.json  sample-schema.json  schema-malformed-tag-property.json  schema-no-tagging-permission.json  schema-no-update-handler-incorrect-identifier.json  schema-not-taggable-with-tags.json  schema-primary-id-writeonly.json  schema-tag-property-createonly-updatable.json  schema-tag-property-createonly.json  schema-tag-property-system-tag-incomplete-pattern.json  schema-tag-property-system-tag-nested.json  (+4 more)
tests/unit/: test_cli.py
vscode-extension/: .eslintrc.json  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: commands.ts  diagnosticMapper.ts  diagnosticProvider.ts  extension.ts  guardRailExecutor.ts  types.ts
vscode-extension/test/: diagnosticMapper.test.ts  diagnosticProvider.test.ts  guardRailExecutor.test.ts  runTest.ts
(+55 files in other folders)
