[metadata]
license_file = LICENSE
description-file = README.md

[isort]
line_length = 88
indent = '    '
multi_line_output = 3
default_section = FIRSTPARTY
skip = env
include_trailing_comma = true
combine_as_imports = True
force_grid_wrap = 0
known_third_party = cfn_guard_rs,coverage,deepdiff,,jsonschema,pytest,pytest-cov,pytest-random-order,rich,StrEnum,wheel

[tool:pytest]
# can't do anything about 3rd part modules, so don't spam us
filterwarnings =
    ignore::DeprecationWarning:botocore
    ignore::DeprecationWarning:werkzeug
    ignore::DeprecationWarning:yaml
